--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "react-router-dom": "^5.2.0",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "uuid": "^8.3.2"
   }
 }
