--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,3 @@
-// {
-//   "extends": ["plugin:cypress/recommended", "react-app"]
-// }
+{
+  "extends": ["plugin:cypress/recommended", "react-app"]
+}
